<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ofdopenerlayout"
    android:layout_width="320dp"
    android:paddingVertical="12dp"
    android:background="@drawable/smoothcorner"
    android:layout_height="wrap_content"
    android:elevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnAttachFile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circlebutton"
                android:contentDescription="@string/attach_from_gallery"
                android:elevation="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_attach_file_24"
                app:tint="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/varelaregular"
                android:text="@string/gallery"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circlebutton"
                android:contentDescription="@string/take_photo"
                android:elevation="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_camera_alt_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/varelaregular"
                android:text="@string/camera"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>