<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fieldAdder"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="12dp"
    android:padding="12dp"
    tools:context=".FieldAdderLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/varelaregular"
            android:text="@string/add_new_field"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/disp_fieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fiieldcomponents"
            android:fontFamily="@font/varelaregular"
            android:hint="Field name"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/varelaregular"
                android:text="Field size"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/unitArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_toStartOf="@id/valueCoresspondToUnitArea"
                android:background="@drawable/fiieldcomponents"
                android:entries="@array/unitArea"
                android:padding="16dp"/>

            <Spinner
                android:id="@+id/valueCoresspondToUnitArea"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/fiieldcomponents"
                android:padding="16dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/lbl_datdas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/varelaregular"
                android:text="@string/dat_das"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateForDATOrDAS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/fiieldcomponents"
                android:drawablePadding="8dp"
                android:fontFamily="@font/varelaregular"
                android:padding="12dp"
                android:text="@string/selected_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/lbl_lastDateFertilizerApplication"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/varelaregular"
                android:text="@string/last_fertilizer_application"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lastFertilizerApplicationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/fiieldcomponents"
                android:drawablePadding="8dp"
                android:fontFamily="@font/varelaregular"
                android:padding="12dp"
                android:text="@string/selected_date"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="right"
            >

            <Button
                android:id="@+id/btnConfirmAddField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/smoothcorner"
                android:backgroundTint="#2E7D32"
                android:fontFamily="@font/varelaregular"
                android:text="@string/confirm"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnCancelAddField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/varelaregular"
                android:padding="16dp"
                android:text="Cancel"
                android:textColor="#2E7D32"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>