<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".NitrogenIdentifierLayout">

    <TextView
        android:id="@+id/fieldTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/varelaregular"
        android:text="@string/quick_identify1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/smoothcorner"
            android:backgroundTint="#2E7D32"
            android:elevation="12dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/firstPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/secondPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/thirdPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/fourthPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/fifthPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/sixthPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/seventhPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/eightPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/ninthPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/tenthPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/eleventhPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

                <ImageView
                    android:id="@+id/twelftPic"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginEnd="8dp"
                    android:background="#ffffff"
                    android:foreground="@drawable/baseline_insert_photo_24"
                    android:foregroundGravity="center"
                    android:src="@drawable/whitebg" />

            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/varelaregular"
        android:text="*click to the boxes to upload a picture"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/varelaregular"
            android:text="Field size"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/unitArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_toStartOf="@id/valueCoresspondToUnitArea"
            android:background="@drawable/fiieldcomponents"
            android:entries="@array/unitArea"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/valueCoresspondToUnitArea"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fiieldcomponents"
            android:padding="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/varelaregular"
            android:text="@string/dat_das"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateForDATOrDAS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fiieldcomponents"
            android:drawablePadding="8dp"
            android:fontFamily="@font/varelaregular"
            android:padding="12dp"
            android:text="@string/selected_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/varelaregular"
            android:text="@string/last_fertilizer_application"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastFertilizerApplicationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fiieldcomponents"
            android:drawablePadding="8dp"
            android:fontFamily="@font/varelaregular"
            android:padding="12dp"
            android:text="@string/selected_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/baseline_calendar_month_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        >

        <Button
            android:id="@+id/btnConfirmIdentify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/smoothcorner"
            android:backgroundTint="#2E7D32"
            android:fontFamily="@font/varelaregular"
            android:text="@string/confirm"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>